# fastapi-oneid

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
examples/basic_app/: main.py
src/fastapi_oneid/: __init__.py  client.py  constants.py  exceptions.py  handlers.py  routers.py  schemas.py  security.py  settings.py
tests/: test_client.py  test_routers.py
