[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "fastapi-oneid"
version = "0.2.0"
description = "Professional OneID integration package for FastAPI applications"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Lochinbek Abduvoitov (lochinbekdev)" }
]
maintainers = [
  { name = "Lochinbek Abduvoitov (lochinbekdev)" }
]
keywords = ["fastapi", "oneid", "oauth", "authentication", "sso", "uzbekistan"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "respx>=0.21.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]
release = [
  "build>=1.2.0,<2.0.0",
  "twine>=6.0.0,<7.0.0",
]

[tool.hatch.build]
include = [
  "src/fastapi_oneid",
  "README.md",
  "LICENSE",
  ".env.example",
]
exclude = [
  ".env",
  ".venv",
  ".pytest_cache",
  "build",
  "dist",
  "*.egg-info",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_oneid"]

[tool.hatch.build.targets.sdist]
include = [
  "src/fastapi_oneid",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  ".env.example",
  "examples",
  "pyproject.toml",
  "tests",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
